wk_taa_taaqa/src/objects/Product_Type_SubTotals__c.object
<CustomObject>
    <description>Stores the product type sub totals of all the options in a bundle</description>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <formula>Line_Item__r.Apttus_Config2__ProductOptionId__r.Apttus_Config2__ParentProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipName>Option_Group_SubTotals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <formula>Line_Item__r.Apttus_Config2__ProductOptionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Total__c</fullName>
        <description>Stores the total of all options grouped by product type</description>
        <label>Product Type Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Line_Item__r.Apttus_Config2__ProductOptionId__r.Apttus_Config2__ProductOptionGroupId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <label>Product Type SubTotals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Type SubTotals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Type SubTotals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>